kustomize/argo-cd/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    im.rwx.infra/tls: 'true'
